# genomic_region_annotator

./: .gitignore  README.md  REPORT.md  environment.yml  pyproject.toml
scripts/: download_gtf.py
src/clash_region_annotator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/genomic_region_annotator/: annotate.py  cli.py  download.py  summarize_sites.py
src/genomic_region_annotator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
